<resources>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="hint_text"><![CDATA[>>> 滑动解锁]]></string>
    <string name="bg">背景图</string>
    <string name="img">专辑图片</string>
    <string name="previous">上一首</string>
    <string name="play">播放按钮</string>
    <string name="next">下一首</string>
    <string name="favourite">收藏</string>
</resources>