<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_radius"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/image_view"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"

            android:textColor="#333333"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center_vertical"

            android:text="@string/add_widget"/>

        <TextView
            android:id="@+id/tip_view"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"

            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="12sp"
            android:gravity="center_vertical"

            android:text="@string/add_widget"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageButton
                android:id="@+id/favourite_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:src="@mipmap/note_btn_loved"
                android:contentDescription="@string/favourite" />

            <ImageButton
                android:id="@+id/previous_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:src="@mipmap/note_btn_pre_white"
                android:contentDescription="@string/previous" />

            <ImageButton
                android:id="@+id/play_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:src="@mipmap/note_btn_play_white"
                android:contentDescription="@string/play" />

            <ImageButton
                android:id="@+id/next_view"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:background="@android:color/transparent"
                android:src="@mipmap/note_btn_next_white"
                android:contentDescription="@string/next" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>