<?xml version="1.0" encoding="utf-8"?>
<com.xzh.musicnotification.view.SlidingFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lock_root"
    android:background="#9F9F9F"
    tools:context=".LockActivityV2">

    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/bg" />

    <TextClock
        android:id="@+id/lock_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="50dp"
        android:format12Hour="HH:mm"
        android:format24Hour="HH:mm"
        android:textColor="#ffffff"
        android:textSize="38sp" />

    <TextClock
        android:id="@+id/lock_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lock_time"
        android:layout_alignStart="@+id/lock_time"
        android:layout_marginTop="5dp"
        android:includeFontPadding="false"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:format12Hour="MM月dd日 EEEE"
        android:format24Hour="MM月dd日 EEEE"
        />

    <ImageView
        android:layout_below="@id/lock_date"
        android:id="@+id/iv_audio"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/img" />

    <TextView
        android:id="@+id/tv_audio_name"
        android:layout_below="@+id/iv_audio"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:textSize="20sp"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/tv_audio"
        android:layout_below="@+id/tv_audio_name"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/previous_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/note_btn_pre_white"
            android:contentDescription="@string/previous" />

        <ImageView
            android:id="@+id/play_view"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/note_btn_play_white"
            android:contentDescription="@string/play" />

        <ImageView
            android:id="@+id/next_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/note_btn_next_white"
            android:contentDescription="@string/next" />

        <ImageView
            android:id="@+id/favourite_view"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/note_btn_love_white"
            android:contentDescription="@string/favourite" />
    </LinearLayout>

    <com.xzh.musicnotification.view.HintTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:includeFontPadding="false"
        android:text="@string/hint_text"
        android:textColor="#ffffff"
        android:textSize="18sp"/>
</com.xzh.musicnotification.view.SlidingFinishLayout>