<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="112dp">

    <ImageView
        android:id="@+id/bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="114dp"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bg" />

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"

        android:textSize="14sp"
        android:textStyle="bold"
        style="@style/NotificationTitle"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/image_view"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tip_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_view"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:textSize="10sp"
        style="@style/NotificationInfo"
        android:layout_alignStart="@id/title_view"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tip_view"
        android:layout_toEndOf="@id/image_view"
        android:gravity="center">

        <ImageView
            android:visibility="gone"
            android:src="@drawable/note_btn_loved"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/favourite" />

        <ImageView
            android:id="@+id/previous_view"
            android:src="@drawable/note_btn_pre_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/previous" />

        <ImageView
            android:id="@+id/play_view"
            android:src="@drawable/note_btn_pause_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/play" />

        <ImageView
            android:id="@+id/next_view"
            android:src="@drawable/note_btn_next_white"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/next" />
    </LinearLayout>

</RelativeLayout>