<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp">

    <TextView
        android:id="@+id/lyric_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/floating_window_bg"
        android:gravity="center"
        android:paddingVertical="30dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/close_view"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/play"
        android:scaleType="fitXY"
        android:src="@drawable/note_btn_close" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:paddingVertical="10dp">

        <ImageView
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginHorizontal="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/favourite"
            android:scaleType="fitXY"
            android:src="@drawable/note_btn_love_white" />

        <ImageView
            android:id="@+id/previous_view"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@string/previous"
            android:scaleType="fitXY"
            android:src="@drawable/note_btn_pre_white" />

        <ImageView
            android:id="@+id/play_view"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginHorizontal="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/play"
            android:scaleType="fitXY"
            android:src="@drawable/note_btn_play_white" />

        <ImageView
            android:id="@+id/next_view"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/next"
            android:scaleType="fitXY"
            android:src="@drawable/note_btn_next_white" />

        <ImageView
            android:visibility="invisible"
            android:id="@+id/favourite_view"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginHorizontal="25dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/favourite"
            android:scaleType="fitXY"
            android:src="@drawable/note_btn_love_white" />
    </LinearLayout>
</RelativeLayout>
